--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "${DEV_PORT}:3000"
+      - "${PORT}:3000"
     environment:
       NODE_ENV: development
     profiles:
@@ -19,7 +19,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "${PROD_PORT}:3000"
+      - "${PORT}:3000"
     environment:
       NODE_ENV: production
     profiles:
