--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,20 +12,15 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Build & Test
-        run: |
-          npm install
-          npm test
-          npm run build
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
 
-      - name: Deploy to Development
-        if: github.ref == 'refs/heads/dev'
-        environment: development
-        run: docker compose --profile development up -d --build
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Deploy to Production
-        if: github.ref == 'refs/heads/main'
-        environment: production
-        run: docker compose --profile production up -d --build
+      - name: Run tests
+        run: npm run test
