--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,6 +12,18 @@ jobs:
 
     steps:
       - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm run test
         uses: actions/checkout@v3
 
       - name: Build & Test
@@ -29,3 +41,4 @@ jobs:
         if: github.ref == 'refs/heads/main'
         environment: production
         run: docker compose --profile production up -d --build
+
