--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Deploy After Merge
+name: CI/CD
 
 on:
   push:
@@ -9,12 +9,14 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    # Set environment per branch
+    environment: ${{ github.ref == 'refs/heads/dev' && 'development' || github.ref == 'refs/heads/main' && 'production' }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Use Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
@@ -23,4 +25,18 @@ jobs:
         run: npm ci
 
       - name: Run tests
-        run: npm run test
+        run: npm test
+
+      - name: Build project
+        run: npm run build
+
+      - name: Deploy
+        run: |
+          if [ "${GITHUB_REF}" = "refs/heads/dev" ]; then
+            echo "Deploying to development"
+          elif [ "${GITHUB_REF}" = "refs/heads/main" ]; then
+            echo "Deploying to production"
+          fi
+        env:
+          DEV_PORT: 3001
+          PROD_PORT: 3000
