--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,28 +11,8 @@ on:
       - dev
 
 jobs:
-  # PR Build & Test only
-  pr-build:
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm run test
-
-  # Build Docker image on push
   build-image:
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' || github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -41,14 +21,32 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Set image tag
+        id: vars
+        run: |
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            echo "TAG=${{ github.event.repository.name }}:${{ github.event.pull_request.number }}" >> $GITHUB_ENV
+            echo "🔖 Using PR tag: ${{ github.event.repository.name }}:${{ github.event.pull_request.number }}"
+          else
+            echo "TAG=${{ github.event.repository.name }}:${{ github.sha }}" >> $GITHUB_ENV
+            echo "🔖 Using commit tag: ${{ github.event.repository.name }}:${{ github.sha }}"
+          fi
+
       - name: Build Docker image
         run: |
-          docker build -t my-app:${{ github.sha }} .
+          echo "🚀 Building Docker image with tag: $TAG"
+          docker build -f Dockerfile.build -t $TAG .
 
-      - name: List built images
-        run: docker images
-
-      - name: Clean up dangling images
+      - name: Run container to produce build artifacts
         run: |
+          echo "📦 Running container to copy build artifacts..."
+          mkdir -p build
+          docker run --rm -v $(pwd)/build:/app/build $TAG
+          echo "✅ Artifacts copied to ./build directory"
+
+      - name: Clean up dangling images/containers
+        run: |
+          echo "🧹 Cleaning up Docker images and containers..."
           docker image prune -af
           docker container prune -f
+          echo "✅ Cleanup complete"
