--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     ports:
       - "${PORT}:3000"
     environment:
-      NODE_ENV: development
+      NODE_ENV: ${NODE_ENV}
+      APP_PROFILE: ${PROFILE}
     profiles:
       - development
 
@@ -21,6 +22,7 @@ services:
     ports:
       - "${PORT}:3000"
     environment:
-      NODE_ENV: production
+      NODE_ENV: ${NODE_ENV}
+      APP_PROFILE: ${PROFILE}
     profiles:
       - production
