--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Build, Test, and Docker Push
+name: Build and Deploy
 
 on:
   pull_request:
@@ -11,7 +11,7 @@ on:
       - dev
 
 jobs:
-  # PR Build & Test only
+  # 1️⃣ PR Build & Clean
   pr-build:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Use Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -30,54 +30,63 @@ jobs:
       - name: Run tests
         run: npm run test
 
-  # Docker Build & Push
-  docker-build-push:
+      - name: Build Docker image (PR only)
+        run: |
+          TAG="navoda-erp-api:pr-${{ github.event.pull_request.number }}"
+          docker build -t $TAG .
+          echo "Docker image built for PR: $TAG"
+
+      - name: Clean up Docker images
+        run: |
+          docker image prune -af
+          docker container prune -f
+
+  # 2️⃣ Push to Docker Hub on Merge/Push
+  push-to-docker:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
+    environment: ${{ github.ref_name == 'main' && 'production' || 'development' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm run test
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Set tags and profile
-        run: |
-          if [ "${{ github.ref_name }}" = "main" ]; then
-            echo "IMAGE_TAG=latest" >> $GITHUB_ENV
-            echo "PROFILE=prod" >> $GITHUB_ENV
-          elif [ "${{ github.ref_name }}" = "dev" ]; then
-            echo "IMAGE_TAG=dev" >> $GITHUB_ENV
-            echo "PROFILE=dev" >> $GITHUB_ENV
-          fi
-          echo "COMMIT_TAG=${{ github.sha }}" >> $GITHUB_ENV
-          echo "🔖 Tags will be: ${{ secrets.DOCKER_USERNAME }}/fusion-erp-api:$IMAGE_TAG and :$COMMIT_TAG"
-
       - name: Build Docker image
         run: |
-          echo "🚀 Building Docker image for profile: $PROFILE"
-          docker build \
-            --build-arg PROFILE=$PROFILE \
-            -f Dockerfile \
-            -t ${{ secrets.DOCKER_USERNAME }}/fusion-erp-api:$IMAGE_TAG \
-            -t ${{ secrets.DOCKER_USERNAME }}/fusion-erp-api:$COMMIT_TAG .
+          TAG="your-dockerhub-username/navoda-erp-api:${{ github.ref_name }}"
+          docker build -t $TAG .
 
-      - name: Push Docker images
+      - name: Push Docker image
         run: |
-          echo "📤 Pushing Docker images..."
-          docker push ${{ secrets.DOCKER_USERNAME }}/fusion-erp-api:$IMAGE_TAG
-          docker push ${{ secrets.DOCKER_USERNAME }}/fusion-erp-api:$COMMIT_TAG
-          echo "✅ Images pushed successfully!"
+          docker push $TAG
+
+      - name: Run Docker container
+        run: |
+          docker rm -f navoda-erp-api || true
+          docker run -d \
+            --name navoda-erp-api \
+            -p 3000:3000 \
+            -e NODE_ENV=${{ vars.NODE_ENV }} \
+            -e APP_PROFILE=${{ vars.PROFILE }} \
+            $TAG
 
       - name: Clean up dangling images/containers
         run: |
-          echo "🧹 Cleaning up Docker images and containers..."
           docker image prune -af
           docker container prune -f
-          echo "✅ Cleanup complete"
