--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Run tests
         run: npm run test
 
-      - name: Build Docker image (PR only)
+      - name: Build Docker image for PR
         run: |
           TAG="navoda-erp-api:pr-${{ github.event.pull_request.number }}"
           docker build -t $TAG .
@@ -69,10 +69,19 @@ jobs:
 
       - name: Build Docker image
         run: |
-          TAG="your-dockerhub-username/navoda-erp-api:${{ github.ref_name }}"
+          # Extract branch name
+          BRANCH=${GITHUB_REF#refs/heads/}
+          # Set tag based on branch
+          if [ "$BRANCH" == "main" ]; then
+            TAG="your-dockerhub-username/navoda-erp-api:latest"
+          else
+            TAG="your-dockerhub-username/navoda-erp-api:dev"
+          fi
+          echo "Docker tag: $TAG"
           docker build -t $TAG .
+          echo "TAG=$TAG" >> $GITHUB_ENV   # Save for later steps
 
-      - name: Push Docker image
+      - name: Push Docker image to Docker Hub
         run: |
           docker push $TAG
 
