--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Build, Test & Deploy
 
 on:
   pull_request:
@@ -41,11 +41,10 @@ jobs:
           docker image prune -af
           docker container prune -f
 
-  # 2️⃣ Push to Docker Hub on Merge/Push
+  # 2️⃣ Push to Docker Hub & Deploy
   push-to-docker:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
-    environment: ${{ github.ref_name == 'main' && 'production' || 'development' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -69,33 +68,153 @@ jobs:
 
       - name: Build Docker image
         run: |
-          # Extract branch name
           BRANCH=${GITHUB_REF#refs/heads/}
-          # Set tag based on branch
           if [ "$BRANCH" = "main" ]; then
             TAG="lumiraqdev/navoda-erp-api:latest"
           else
             TAG="lumiraqdev/navoda-erp-api:dev"
           fi
           echo "Docker tag: $TAG"
-          echo "TAG=$TAG" >> $GITHUB_ENV   # Save for later steps
+          echo "TAG=$TAG" >> $GITHUB_ENV
           docker build -t $TAG .
 
       - name: Push Docker image to Docker Hub
         run: |
           docker push ${{ env.TAG }}
 
-      - name: Run Docker container
-        run: |
-          docker rm -f navoda-erp-api || true
-          docker run -d \
-            --name navoda-erp-api \
-            -p 3000:3000 \
-            -e NODE_ENV=${{ vars.NODE_ENV }} \
-            -e APP_PROFILE=${{ vars.PROFILE }} \
-            ${{ env.TAG }}
+      - name: Test SSH connection
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            echo "SSH login successful!"
+            whoami
+            hostname
 
-      - name: Clean up dangling images/containers
-        run: |
-          docker image prune -af
-          docker container prune -f
+      - name: Deploy Docker container to server
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            echo "Deploying ${{ env.TAG }}..."
+            docker rm -f navoda-erp-api || true
+            docker pull ${{ env.TAG }}
+            docker run -d \
+              --name navoda-erp-api \
+              -p 3000:3000 \
+              -e NODE_ENV=${{ github.ref_name == 'main' && 'production' || 'development' }} \
+              -e APP_PROFILE=${{ vars.PROFILE }} \
+              ${{ env.TAG }}
+            docker image prune -af
+            docker container prune -f
+            echo "Deployment complete!"
+
+
+
+#name: Build and Deploy
+#
+#on:
+#  pull_request:
+#    branches:
+#      - main
+#      - dev
+#  push:
+#    branches:
+#      - main
+#      - dev
+#
+#jobs:
+#  # 1️⃣ PR Build & Clean
+#  pr-build:
+#    if: github.event_name == 'pull_request'
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#
+#      - name: Setup Node.js
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: 20
+#
+#      - name: Install dependencies
+#        run: npm ci
+#
+#      - name: Run tests
+#        run: npm run test
+#
+#      - name: Build Docker image for PR
+#        run: |
+#          TAG="navoda-erp-api:pr-${{ github.event.pull_request.number }}"
+#          docker build -t $TAG .
+#          echo "Docker image built for PR: $TAG"
+#
+#      - name: Clean up Docker images
+#        run: |
+#          docker image prune -af
+#          docker container prune -f
+#
+#  # 2️⃣ Push to Docker Hub on Merge/Push
+#  push-to-docker:
+#    if: github.event_name == 'push'
+#    runs-on: ubuntu-latest
+#    environment: ${{ github.ref_name == 'main' && 'production' || 'development' }}
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#
+#      - name: Setup Node.js
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: 20
+#
+#      - name: Install dependencies
+#        run: npm ci
+#
+#      - name: Run tests
+#        run: npm run test
+#
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+#
+#      - name: Build Docker image
+#        run: |
+#          # Extract branch name
+#          BRANCH=${GITHUB_REF#refs/heads/}
+#          # Set tag based on branch
+#          if [ "$BRANCH" = "main" ]; then
+#            TAG="lumiraqdev/navoda-erp-api:latest"
+#          else
+#            TAG="lumiraqdev/navoda-erp-api:dev"
+#          fi
+#          echo "Docker tag: $TAG"
+#          echo "TAG=$TAG" >> $GITHUB_ENV   # Save for later steps
+#          docker build -t $TAG .
+#
+#      - name: Push Docker image to Docker Hub
+#        run: |
+#          docker push ${{ env.TAG }}
+#
+#      - name: Run Docker container
+#        run: |
+#          docker rm -f navoda-erp-api || true
+#          docker run -d \
+#            --name navoda-erp-api \
+#            -p 3000:3000 \
+#            -e NODE_ENV=${{ vars.NODE_ENV }} \
+#            -e APP_PROFILE=${{ vars.PROFILE }} \
+#            ${{ env.TAG }}
+#
+#      - name: Clean up dangling images/containers
+#        run: |
+#          docker image prune -af
+#          docker container prune -f
