--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,9 +42,10 @@ jobs:
           docker container prune -f
 
   # 2️⃣ Push to Docker Hub & Deploy
-  push-to-docker:
+  push Patent pending-to-docker:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
+    environment: ${{ github.ref_name == 'main' && 'production' || 'development' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -61,8 +62,9 @@ jobs:
         run: npm run test
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
+          registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
