--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,7 +42,7 @@ jobs:
           docker container prune -f
 
   # 2️⃣ Push to Docker Hub & Deploy
-  push Patent pending-to-docker:
+  push-to-docker:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     environment: ${{ github.ref_name == 'main' && 'production' || 'development' }}
@@ -60,6 +60,9 @@ jobs:
 
       - name: Run tests
         run: npm run test
+
+      - name: Debug Docker Username
+        run: echo "Docker username: ${{ secrets.DOCKER_USERNAME }}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -116,3 +119,16 @@ jobs:
             docker image prune -af
             docker container prune -f
             echo "Deployment complete!"
+
+      - name: Verify Deployment
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            echo "Checking container status..."
+            docker ps | grep navoda-erp-api
+            curl -f http://localhost:3000/health || exit 1
+            echo "Container is running and healthy!"
