--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,7 +41,7 @@ jobs:
           docker image prune -af
           docker container prune -f
 
-  # 2️⃣ Push to Docker Hub on Merge/Push
+  # 2️⃣ Push to Docker Hub & Deploy on Server
   push-to-docker:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
@@ -78,24 +78,37 @@ jobs:
             TAG="lumiraqdev/navoda-erp-api:dev"
           fi
           echo "Docker tag: $TAG"
-          echo "TAG=$TAG" >> $GITHUB_ENV   # Save for later steps
+          echo "TAG=$TAG" >> $GITHUB_ENV
           docker build -t $TAG .
 
       - name: Push Docker image to Docker Hub
-        run: |
-          docker push ${{ env.TAG }}
+        run: docker push ${{ env.TAG }}
 
-      - name: Run Docker container
-        run: |
-          docker rm -f navoda-erp-api || true
-          docker run -d \
-            --name navoda-erp-api \
-            -p 3000:3000 \
-            -e NODE_ENV=${{ vars.NODE_ENV }} \
-            -e APP_PROFILE=${{ vars.PROFILE }} \
-            ${{ env.TAG }}
+      # 🔑 Deploy to Remote Server
+      - name: Deploy on Server via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            echo "Logging in to Docker Hub..."
+            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+            
+            echo "Pulling latest image..."
+            docker pull ${{ env.TAG }}
+            
+            echo "Stopping and removing old container..."
+            docker rm -f navoda-erp-api || true
+            
+            echo "Running new container..."
+            docker run -d \
+              --name navoda-erp-api \
+              -p 3000:3000 \
+              -e NODE_ENV=${{ vars.NODE_ENV }} \
+              -e APP_PROFILE=${{ vars.PROFILE }} \
+              ${{ env.TAG }}
 
-      - name: Clean up dangling images/containers
-        run: |
-          docker image prune -af
-          docker container prune -f
+            echo "Clean up..."
+            docker image prune -af
+            docker container prune -f
