--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Build, Test & Deploy
+name: Build and Deploy
 
 on:
   pull_request:
@@ -41,10 +41,11 @@ jobs:
           docker image prune -af
           docker container prune -f
 
-  # 2️⃣ Push to Docker Hub & Deploy
+  # 2️⃣ Push to Docker Hub & Deploy on Server
   push-to-docker:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
+    environment: ${{ github.ref_name == 'main' && 'production' || 'development' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -68,7 +69,9 @@ jobs:
 
       - name: Build Docker image
         run: |
+          # Extract branch name
           BRANCH=${GITHUB_REF#refs/heads/}
+          # Set tag based on branch
           if [ "$BRANCH" = "main" ]; then
             TAG="lumiraqdev/navoda-erp-api:latest"
           else
@@ -79,38 +82,33 @@ jobs:
           docker build -t $TAG .
 
       - name: Push Docker image to Docker Hub
-        run: |
-          docker push ${{ env.TAG }}
+        run: docker push ${{ env.TAG }}
 
-      - name: Test SSH connection
+      # 🔑 Deploy to Remote Server
+      - name: Deploy on Server via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_KEY }}
-          port: 22
           script: |
-            echo "SSH login successful!"
-            whoami
-            hostname
-
-      - name: Deploy Docker container to server
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
-          script: |
-            echo "Deploying ${{ env.TAG }}..."
-            docker rm -f navoda-erp-api || true
+            echo "Logging in to Docker Hub..."
+            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+            
+            echo "Pulling latest image..."
             docker pull ${{ env.TAG }}
+            
+            echo "Stopping and removing old container..."
+            docker rm -f navoda-erp-api || true
+            
+            echo "Running new container..."
             docker run -d \
               --name navoda-erp-api \
               -p 3000:3000 \
-              -e NODE_ENV=${{ github.ref_name == 'main' && 'production' || 'development' }} \
+              -e NODE_ENV=${{ vars.NODE_ENV }} \
               -e APP_PROFILE=${{ vars.PROFILE }} \
               ${{ env.TAG }}
+
+            echo "Clean up..."
             docker image prune -af
             docker container prune -f
-            echo "Deployment complete!"
