--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,7 @@ on:
       - dev
 
 jobs:
-  # 1️⃣ PR Build & Clean test
+  # 1️⃣ PR Build & Clean
   pr-build:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
@@ -69,9 +69,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          # Extract branch name
           BRANCH=${GITHUB_REF#refs/heads/}
-          # Set tag based on branch
           if [ "$BRANCH" = "main" ]; then
             TAG="lumiraqdev/navoda-erp-api:latest"
           else
@@ -84,31 +82,33 @@ jobs:
       - name: Push Docker image to Docker Hub
         run: docker push ${{ env.TAG }}
 
-      # 🔑 Deploy to Remote Server
-      - name: Deploy on Server via SSH
+      # 🔑 Deploy via Docker Compose on Server
+      - name: Deploy via Docker Compose
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_KEY }}
+          port: 22
           script: |
             echo "Logging in to Docker Hub..."
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-            
-            echo "Pulling latest image..."
-            docker pull ${{ env.TAG }}
-            
-            echo "Stopping and removing old container..."
-            docker rm -f navoda-erp-api || true
-            
-            echo "Running new container..."
-            docker run -d \
-              --name navoda-erp-api \
-              -p 3000:3000 \
-              -e NODE_ENV=${{ vars.NODE_ENV }} \
-              -e APP_PROFILE=${{ vars.PROFILE }} \
-              ${{ env.TAG }}
 
-            echo "Clean up..."
-            docker image prune -af
-            docker container prune -f
+            BRANCH="${GITHUB_REF#refs/heads/}"
+            if [ "$BRANCH" = "main" ]; then
+              PROFILE="production"
+            else
+              PROFILE="development"
+            fi
+
+            echo "Pulling latest images..."
+            docker-compose -f docker-compose.yml pull
+
+            echo "Stopping old containers for profile $PROFILE..."
+            docker-compose -f docker-compose.yml --profile $PROFILE down
+
+            echo "Starting containers with profile $PROFILE..."
+            docker-compose -f docker-compose.yml --profile $PROFILE up -d --build
+
+            echo "Listing running containers..."
+            docker ps
