--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -94,7 +94,15 @@ jobs:
             echo "Logging in to Docker Hub..."
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-            BRANCH="${GITHUB_REF#refs/heads/}"
+            # Detect branch correctly
+            if [ "${GITHUB_EVENT_NAME}" = "pull_request" ]; then
+              BRANCH="${{ github.base_ref }}"   # target branch of the PR
+            else
+              BRANCH="${GITHUB_REF#refs/heads/}"  # direct push branch
+            fi
+
+            echo "Detected branch: $BRANCH"
+
             if [ "$BRANCH" = "main" ]; then
               IMAGE_NAME="lumiraqdev/navoda-erp-api:latest"
               CONTAINER_NAME="navoda-erp-api-prod"
